<resources>
    <string name="privacy_policy_link">https://blindoapp.com/privacy-policy/</string>
    <string name="app_name">Blindo</string>
    <string name="title_activity_blindo">Blindo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share">Share</string>
    <string name="share_app_title">%1$s in Blindo</string>
    <string name="vision__service_name" translatable="false">Blindo Vision</string>
    <string name="vision__service_summary">
        Take the accessibility to the next level by describing any element with a simple screenshot.
    </string>
    <string name="vision__introduce">
        Take the accessibility to the next level by describing any element with a simple screenshot.\n
        Just enable the Blindo Vision accessibility service, take a screenshot and Blindo Vision will crop the screen element where the accessibility focus is,
        then Blindo Vision will use AI models to recognize the text (OCR) and describe the image to you.\n
        Blindo Vision requires an internet connection and Blindo coins to spend, 1 coin per screenshot
    </string>
    <string name="vision__how_to_use">
        With Blindo Vision enabled a notification will bring up when a screenshot is detected,
        just tap it to describe the screen reader focused element, remember that you need Blindo coins to run the image analisis.
        You can configure the language and the notifications timeout in Blindo Navigation Drawer -\> Settings -\> Blindo Vision Settings
    </string>
    <string name="vision__permissions_notice">
        As Blindo Vision needs access to the screenshots in order to provide the image description we need you to grant us some permissions:
    </string>
    <string-array name="vision__permissions_description">
        <item>Read media content from external storage, to recover screenshots</item>
        <item>Internet access to be able to send the screenshots to our servers for analysis, remember that they are stored temporarily without any data that can be linked to you</item>
    </string-array>
    <string name="vision__grant_permissions">Grant permissions</string>
    <string name="vision__later">Maybe later</string>
    <string name="vision__ready_to_enable">
        Great, you are ready to enable Blindo Vision, do you want to go to accessibility settings to do it?
    </string>
    <string name="vision__enable_now">Enable Blindo Vision</string>
    <string name="vision__unable_to_open_accessibility_settings">Unable to open accessibility settings, you must enable Blindo Vision manualy</string>
    <string name="vision__image_description_title">Image description</string>
    <string name="vision__loading_title">Analizing image, please wait...</string>
    <string name="vision__error_title">Unable to analize image</string>
    <string name="vision__empty_title">Nothing to analize in the image</string>
    <string name="vision__retry">Retry</string>
    <string name="vision__description">Description: %1$s</string>
    <string name="vision__confidence">Confidence: %1$s</string>
    <string name="vision__text">Text: %1$s</string>
    <string name="vision__tags">Tags: %1$s</string>
    <string name="vision__screenshot_detected">Screenshot detected, touch to describe it</string>
    <string name="permissions__activity_title">Blindo Vision Permissions</string>
    <string name="permissions__loading_title">Checking for permissions...</string>
    <string name="permissions__read_external_storage_description">
        Blindo Vision requires to access the storage of your screenshots in order to get the clipping of the elements you want to describe.
    </string>
    <string name="permissions__deny">No, thanks</string>
    <string name="permissions__accept">Continue</string>
    <string name="settings__title">Settings</string>
    <string name="settings__category_notifications">Notifications</string>
    <string name="settings__category_ads">Ads</string>
    <string name="settings__category_others">Others</string>
    <string name="settings__clear_cache_title">Clear cache</string>
    <string name="settings__clear_cache_summary">Clear the network cache. Recommended when Blindo has problems detecting memberships, coins or content updates</string>
    <string name="settings__clear_cache_message">Do you want to clear the Blindo\'s cache?, this action cannot be undone</string>
    <string name="settings__clear_cache_continue">Continue</string>
    <string name="settings__clear_cache_cancel">Cancel</string>
    <string name="settings__clear_search_history_title">Clear search history</string>
    <string name="settings__clear_search_history_summary">Clear your search history. This history is just storaged in your device</string>
    <string name="settings__clear_search_history_message">Do you want to clear all your search history?, this action cannot be undone</string>
    <string name="settings__clear_search_history_clear">Clear</string>
    <string name="settings__clear_search_history_no">No</string>
    <string name="settings__vision_activity_title">Blindo Vision Preferences</string>
    <string name="settings__vision_general_category">General</string>
    <string name="settings__vision_language_title">Language</string>
    <string name="settings__vision_language_summary">Select the language for the image descriptions</string>
    <string name="settings__vision_auto_discard_notifications_title">Auto discard notifications</string>
    <string name="settings__vision_auto_discard_notifications_summary">Seconds to wait to auto discard the screenshot detection notifications</string>
    <string name="settings__notifications_not_configured_advise_title">Configure push notifications</string>
    <string name="settings__notifications_not_configured_advise_message">You have not configured push notifications yet, do you want to configure them?</string>
    <string name="settings__notifications_not_configured_advise_yes">Go to configuration</string>
    <string name="settings__notifications_not_configured_advise_later">Maybe later</string>
    <string name="settings__notifications_subscribe_news_topic_title">News and announcements</string>
    <string name="settings__notifications_subscribe_news_topic_summary">Receive notifications about Blindo news and announcements</string>
    <string name="search__app_title">Searching for \"%1$s\"</string>
    <string name="search__app_hint">Search by package name or app name</string>
    <string name="search__voice_prompt_text">Say an app name or keyword to search on Blindo</string>
    <string name="notification__purchases_channel_title">Purchases</string>
    <string name="notification__purchases_channel_description">Notifications about new purchases and subscription changes</string>
    <string name="notification__purchases_new_coins_title">Coins purchased</string>
    <string name="notification__purchases_new_coins_body">Your payment was confirmed and %1$d coins were added to your account</string>
    <string name="notification__purchases_new_membership_title">Membership purchased</string>
    <string name="notification__purchases_new_membership_body">Your payment was confirmed and your %1$s is active</string>
    <string name="notification__purchases_new_membership_classic">Classic Membership</string>
    <string name="notification__news_channel_title">News</string>
    <string name="notification__news_channel_description">Notifications about Blindo news and announcements</string>
    <string name="ads_settings_title">Ads Settings</string>
    <string name="ads__current_status">
        %1$s.
        If you want to change your ads preferences set your consent again, also you can buy a Blindo subscription to remove all the ads.
    </string>
    <string name="ads__personalized">You prefer to show personalized ads</string>
    <string name="ads__non_personalized">You prefer to show non-personalized ads</string>
    <string name="ads__ads_free">You have a Blindo subscription so you do not show ads</string>
    <string name="ads__ads_free_but_not_purchased">You indicated that you prefer to purchase a subscription but you have not done</string>
    <string name="ads__non_required">You are not from Europe so you are not able to change your ads preferences and Blindo will show personalized ads</string>
    <string name="ads__unknown_consent">Unknown ads consent status, please set your consent</string>
    <string name="ads__ads_blocker_or_internet_error">Internet connection error or ads blocker is detected</string>
    <string name="ads__action_change_consent">Set my consent</string>
    <string name="ads__purchase_subscription">Purchase a subscription</string>
    <string name="splash__loading">Loading Blindo, please wait...</string>
    <string name="menu__create_rating">New rating</string>
    <string name="menu__download_backup">Restore my backup</string>
    <string name="tutorial__title">Tutorial</string>
    <string name="tutorial__step_welcome">Welcome to Blindo, the most important and biggest accessibility community where you can find ratings, comments and screenreaders labels for Android. If you want to know how to use Blindo press next, otherwise press omit</string>
    <string name="tutorial__step_home">In home you can see all the apps registered on Blindo with some information like app category, accessibility rating and available labels packs, press any one to open details about the app</string>
    <string name="auth__step_welcome">With an account you can access to exclusive features on Blindo like publish new ratings, comments or labels on our community, however you can continue without an account but some features wont be available until your sign in. Press continue to sign in or sign up</string>
    <string name="auth__continue_button">Continue</string>
    <string name="auth__skip_verification_button">Verify later</string>
    <string name="menu__home">Home</string>
    <string name="viewstate__retry">Retry</string>
    <string name="viewstate__empty_error_title">Ooops!</string>
    <string name="viewstate__loading_title">Loading...</string>
    <string name="localapps__title">My apps</string>
    <string name="sli__title">Smart Labels Installer</string>
    <string name="sli__introduction">SLI analize your installed apps and generate a custom labels pack for you selecting the best labels for you trying to cover all the unlabeled buttons in your device. You can translate labels from other languages to increment the number of possibilities, also you can prefer your backup and complet the missing labels with our smart installer</string>
    <string name="sli__prefer_user_labels">Prefer my labels</string>
    <string name="sli__translate">Translate</string>
    <string name="sli_action_start">Start</string>
    <string name="membership__title">Memberships</string>
    <string name="viewstate__app_details_empty_description">No app details, add new rating or update labels pack to register the app</string>
    <string name="viewstate__packs_empty_description">No label packs found</string>
    <string name="ratingcreator__requirements">All the ratings are required and the minimum value is 1 star, the comment is optional and the language of your device will be used as reference</string>
    <string name="ratingcreator__comment_hint">Tell us about this app. (Optional)</string>
    <string name="ratingcreator__continue_button">Continue</string>
    <string name="backup__title">My labels</string>
    <string name="about__title">About</string>
    <string name="usercomments__title">My comments</string>
    <string name="usercomments__view_state_empty">You don\t have any rating or comment yet</string>
</resources>