<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/settings__vision_general_category">

        <DropDownPreference
            app:key="language"
            app:title="@string/settings__vision_language_title"
            app:summary="@string/settings__vision_language_summary"
            app:entries="@array/vision__language_entries"
            app:entryValues="@array/vision__language_values"
            app:defaultValue="ENGLISH"
            />

        <ListPreference
            app:key="autoDiscardNotifications"
            app:title="@string/settings__vision_auto_discard_notifications_title"
            app:summary="@string/settings__vision_auto_discard_notifications_summary"
            app:entries="@array/vision__auto_discard_notifications_entries"
            app:entryValues="@array/vision__auto_discard_notifications_values"
            app:defaultValue="15"
            />

    </PreferenceCategory>

</PreferenceScreen>
