<?xml version="1.0" encoding="utf-8"?>
<com.wizeline.viewstate.ViewState
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appViewState"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:errorTitleText="@string/viewstate__empty_error_title"
    app:emptyTitleText="@string/viewstate__empty_error_title"
    app:loadingTitleText="@string/viewstate__loading_title"
    app:errorRetryText="@string/viewstate__retry"
    tools:context=".ui.app.details.AppFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/appViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/appTabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:tabMinWidth="@dimen/min_a11y_touch_target_size"
                app:tabMode="auto"
                app:tabIndicatorAnimationMode="elastic"
                app:tabIndicatorHeight="@dimen/big"
                />

        </androidx.viewpager.widget.ViewPager>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</com.wizeline.viewstate.ViewState>
