<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sli.SliFragment">

     <TextView
        android:id="@+id/preferUserLabelsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/preferUserLabels"
        android:text="@string/sli__prefer_user_labels"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/translateLabel" />

    <TextView
        android:id="@+id/translateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/translate"
        android:text="@string/sli__translate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/preferUserLabelsLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/preferUserLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/preferUserLabelsLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/translate" />

    <Switch
        android:id="@+id/translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/translateLabel"
        app:layout_constraintStart_toEndOf="@id/preferUserLabels"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sliInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sli__introduction"
        app:layout_constraintTop_toBottomOf="@id/preferUserLabels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sliAction" />

    <Button
        android:id="@+id/sliAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sli_action_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
