<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utils.authentication.ui.LoginActivity">

    <TextView
        android:id="@+id/authStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:singleLine="false"
        android:gravity="center_vertical|start"
        android:text="@string/auth__step_welcome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/authNotice" />

    <TextView
        android:id="@+id/authNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:singleLine="false"
        android:gravity="center_vertical|start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/authActionButton" />

    <Button
        android:id="@+id/authSkipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth__skip_verification_button"
        android:visibility="invisible"
        app:layout_constraintRight_toLeftOf="@id/authActionButton"
        app:layout_constraintLeft_toLeftOf="@id/authActionButton"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/authActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth__continue_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/authSkipButton"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
