<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rating.create.RatingCreatorFragment">

    <TextView
        android:id="@+id/requirements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_components_margin"
        android:text="@string/ratingcreator__requirements"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ratingBars" />

    <include
        layout="@layout/content_rating_bars"
        android:id="@+id/ratingBars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/requirements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/commentText" />

    <EditText
        android:id="@+id/commentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_components_margin"
        android:inputType="textCapSentences"
        android:singleLine="false"
        android:maxLength="1000"
        android:isScrollContainer="true"
        android:hint="@string/ratingcreator__comment_hint"
        app:layout_constraintTop_toBottomOf="@id/ratingBars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ratingContinue" />

    <Button
        android:id="@+id/ratingContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_components_margin"
        android:text="@string/ratingcreator__continue_button"
        app:layout_constraintTop_toBottomOf="@id/commentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
