<?xml version="1.0" encoding="utf-8"?>
<com.wizeline.viewstate.ViewState
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/permissionsViewState"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:loadingTitleText="@string/permissions__loading_title"
    tools:context=".ui.permissions.PermissionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_components_margin"
            android:layout_marginHorizontal="@dimen/default_components_margin"
            app:layout_constraintBottom_toTopOf="@id/actionsButtonsBarrier"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/actionsButtonsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="denyPermissions,acceptPermissions"
            app:barrierDirection="top"
            />

        <Button
            android:id="@+id/denyPermissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_components_margin"
            android:text="@string/permissions__deny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/acceptPermissions"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/acceptPermissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_components_margin"
            android:layout_marginEnd="@dimen/default_components_margin"
            android:text="@string/permissions__accept"
            app:layout_constraintStart_toEndOf="@id/denyPermissions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.wizeline.viewstate.ViewState>
